codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_status_line_with_agentmemory_indicator.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 3937
expression: terminal.backend()
---
"                                                                                                    "
"› Ask Codex to do anything                                                                          "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  Status line content · Agentmemory                                                                 "
